<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JustTipBarang"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@color/cardview_shadow_end_color"
        android:padding="@android:dimen/app_icon_size">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama :"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nama"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama Barang :"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/nabar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/namabarang"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Banyak Barang :"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/bb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/banyakbarang"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tanggal Penitipan:"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/tglntp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanggalnitip"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tanggal Pengambilan :"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/tglambil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanggalambil"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lokasi Pengambilan Barang :"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/tgl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanggalkembali"/>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="Nitip Sekarang"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="#ffffff"
            android:onClick="submitOrder"
            tools:ignore="OnClick"
            />


    </LinearLayout>

</ScrollView>